[package]
name = "undulations"
version = "0.1.0"
description = "Wav to waveform"
authors = ["JonathanUsername"]
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
env_logger = "0.10.0"
hound = "3.5.0"
log = "0.4.17"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"


[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
